--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,8 @@
   <!-- JUMBOTRON -->
   <div class="jumbotron">
     <div class="container">
-      <h1>Helloooo</h1>
+      <h1>Streetsmart</h1>
+      <h4>A guide to local urban art</h4>
     </div>
   </div>
 
@@ -41,24 +42,25 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal"></button>
-            <h4 class="modal-title">Artist Pieces</h4>
+            <h4 class="modal-title">Piece of Art</h4>
           </div>
 
           <div class="modal-body" id="singlePiece">
             <script id="single-piece-template" type="text/x-handlebars-template">
               <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-12">
                   <div class="row single-piece-html">
                     <img src="{{image}}" class="img-responsive thumbnail">
+                    <div><span>Title: </span>{{title}}</div>
+                    <div><span>Type: </span>{{type}}</div>
+                    <div><span>Location: </span>{{location}}</div>
+                    <div>{{#if active}}<span>Active: </span> YES{{else}}<span>Active: </span>NO {{/if}}</div>
+                    <div><span>Note: </span>{{note}}</div>
+                    <div><span>Artist: </span>{{artist.name}}</div>
                   </div>
-                  <div class="row">
-                    <div class="col-md-3"><span>Title: </span>{{title}}</div>
-                    <div class="col-md-3"><span>Type: </span>{{type}}</div>
-                    <div class="col-md-3"><span>Location: </span>{{location}}</div>
-                    <div class="col-md-3">{{#if active}}<span>Active: </span> YES{{else}}<span>Active: </span>NO {{/if}}</div>
-                    <div class="col-md-3"><span>Note: </span>{{note}}</div>
-                    <div class="col-md-3"><span>Artist: </span>{{artist.name}}</div>
-                  </div>
+
+
+
 
                 </div>
               </div>
@@ -77,34 +79,37 @@
 
   <!-- ARTIST FORM -->
   <section class="container artists">
-    <div class="row">
-        <div class="col-md-10 col-md-offset-1">
-          <h2>Artists</h2>
-        </div>
-    </div>
-
-    <section id="artist-form" class="container">
+    <div class="container artistTitleForm">
       <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <form class="form-horizontal form-inline">
-            <fieldset>
-              <legend>Add New Artist</legend>
-
-              <div class="col-md-10">
-                <div class="form-group col-md-4">
-                  <input type="text" name="name" placeholder="Artist Name">
-                </div>
-
-                <div class="form-group col-md-4">
-                  <input type="text" name="contact" placeholder="Social Media Link">
-                </div>
-                <button id="artist-save" class="btn btn-primary center-block">Save</button>
-              </div>
-            </fieldset>
-          </form>
-        </div>
+          <div class="col-md-10 col-md-offset-1">
+            <h1>Artists</h1>
+          </div>
       </div>
-    </section>
+
+      <section id="artist-form" class="container">
+        <div class="row">
+          <div class="col-md-8 col-md-offset-2">
+            <form class="form-horizontal form-inline">
+              <fieldset>
+                <legend>Add New Artist</legend>
+
+                <div class="col-md-10">
+                  <div class="form-group col-md-4">
+                    <input type="text" name="name" placeholder="Artist Name">
+                  </div>
+
+                  <div class="form-group col-md-4">
+                    <input type="text" name="contact" placeholder="Social Media Link">
+                  </div>
+                  <button id="artist-save" class="btn btn-primary center-block">Save</button>
+                </div>
+              </fieldset>
+            </form>
+          </div>
+        </div>
+      </section>
+
+    </div>
 
     <!-- ARTISTS -->
     <div id="artists" class="container">
@@ -122,12 +127,12 @@
                     <ul class="list-group">
 
                       <li class="list-group-item">
-                        <h3 class="inline-header">Name:</h3>
+                        <h5 class="inline-header">Name:</h5>
                         <span class="artistName">{{name}}</span>
                       </li>
 
                       <li class="list-group-item">
-                        <h3 class="inline-header">Social Media:</h3>
+                        <h5 class="inline-header">Social Media:</h5>
                         <span class="contact">{{#if contact}}<a href="{{contact}}">Check out their stuff!</span>{{else}}<span>n/a</span>{{/if}}
                       </li>
 
@@ -162,7 +167,7 @@
 
           <!-- PIECE MODAL FORM -->
           <fieldset class="form-horizontal">
-            <h3><span>Add a piece!</span></h3>
+            <h2><span>Add a piece!</span></hs>
             <div class="form-group">
               <label class="col-md-4 control-label" for="title">Piece Title</label>
               <div class="col-md-4">
