--- a/views/index.html
+++ b/views/index.html
@@ -44,7 +44,7 @@
             <button type="button" class="close" data-dismiss="modal"></button>
             <h4 class="modal-title">Piece of Art</h4>
           </div>
-
+          <div id="singlePiece"></div>
           <div class="modal-body" id="singlePiece">
             <script id="single-piece-template" type="text/x-handlebars-template">
               <div class="row">
@@ -174,14 +174,14 @@
             <div class="form-group">
               <label class="col-md-4 control-label" for="type">Type</label>
               <div class="col-md-4">
-                <input id="type" name="type" type="text" class="form-control" required>
+                <input id="type" name="type" type="text" class="form-control required">
               </div>
             </div>
 
             <div class="form-group">
               <label class="col-md-4 control-label" for="image">Image</label>
               <div class="col-md-4">
-                <input id="image" type="text" class="form-control" required>
+                <input id="image" type="text" class="form-control required">
               </div>
             </div>
           </fieldset>
